--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "gsap": "^2.1.3",
     "next": "^9.0.6",
     "react": "^16.9.0",
