--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "dotenv": "^8.1.0",
     "gsap": "^2.1.3",
     "next": "^9.0.6",
     "react": "^16.9.0",
