--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.0",
     "dotenv": "^8.1.0",
     "gsap": "^2.1.3",
+    "lodash": "^4.17.15",
     "next": "^9.0.6",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
