Edit dnd and editor

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash": "^4.17.15",
     "next": "^9.0.6",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-use-media-query-hook": "0.0.1"
   }
 }
