--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "createGenericQuiz.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "next",
     "dev:https": "node server.js",
@@ -21,6 +24,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
+    "react-simple-grid-dnd": "^1.1.1",
     "react-use-media-query-hook": "0.0.1"
   }
 }
