--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "react-facebook-login": "^4.1.1",
     "react-simple-grid-dnd": "^1.1.1",
     "react-use-media-query-hook": "0.0.1"
+  },
+  "devDependencies": {
+    "babel-plugin-inline-react-svg": "^1.1.1"
   }
 }
